Career Opportunity Section

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="career"></div>
     <div id="sign-up"></div>
     <div id="backdrop"></div>
     <div id="About-us"></div>
